Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-121033

onBodyContact being called after object is deleted

    XMLWordPrintable

Details

    • 87d7c3340 (dev), c14104f47 (6.7), caad0228d (6.6), 6f804f8b3 (tqtc/lts-6.5)

    Description

      The onBodyContact is being called after objects are deleted. To reproduce run the attached example and hold down space to keep respawning boxes. After a while it will crash.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jokarlss Jonas Karlsson
            jokarlss Jonas Karlsson
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes